tests/method/not_found.rev
struct Foo {}

Foo().unknown() // error: structure has no field 'unknown'